# banner

./: .gitignore  README.md  __init__.py  __main__.py  banner.py  banner.tcss  pyproject.toml  requirements.txt  schema.prisma  setup.py  setup.sh
.github/workflows/: python-publish.yml
app/: app.py
banner/app/: __init__.py  app.tcss
banner/models/: __init__.py  banner.py
banner/ui/: __init__.py
banner/ui/dialogs/: __init__.py  info.py  input.py  text.py
banner/ui/screens/: add.py  edit.py  gen_ascii_text.py  main.py
models/: base.py
ui/dialogs/: error.py  yes_or_no.py
ui/screens/: __init__.py  add.py  edit.py  gen_ascii_text.py  main.py
